# Adler_Database

./: CMakeLists.txt  README.md  TODO.md  logs.txt  output.xml
.cache/clangd/index/: APIClient.cpp.62C6BCA09A7F578D.idx  APIClient.h.F522823110B0CE25.idx  httplib.h.A9AC22B1FE31CC42.idx  logger.cpp.312428C0DB111D8A.idx  logger.h.B96E2282440D2D83.idx  main.cpp.1D4B5EEB0D157D92.idx
SQL_Queries/: Create_Database.sql  Insert_Dummy_Data.sql
_CPack_Packages/win64/NSIS/: NSIS.InstallOptions.ini  project.nsi
_CPack_Packages/win64/NSIS/AdlerDatabase-1.0.0-win64/include/headers/: APIClient.h  httplib.h
headers/: APIClient.h  caller.h
libraries/WebView2/: .signature.p7s  Microsoft.Web.WebView2.nuspec  WebView2Experimental.idl  WebView2Experimental.tlb
libraries/WebView2/_rels/: .rels
libraries/WebView2/lib/: Microsoft.Web.WebView2.Core.winmd
libraries/WebView2/lib_manual/netcoreapp3.0/: Microsoft.Web.WebView2.Core.xml
libraries/WebView2/tools/wv2winrt/: winrt_winmd.winmd
src/: APIClient.cpp  CMakeLists.txt  caller.cpp  example.xml  logger.cpp  logger.h  main.cpp  py_connector.cpp  sql_connector.cpp  sql_connector.h  sql_connector.py  sql_connetion_test.py
web/: addCaregiver.html  addContact.html  addMember.html  base.html  exporting.html  importing.html  index.html  members.html  members2.html  temp.html  tours.html
web/resources/base_JSONs/: enrollment_form.json  member.json  thing.json
